[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = "0.20.0"
tokio-rustls = "0.23.4"
webpki-roots = "0.22.1"  # For common certificate roots
x509-parser = "0.11"     # For parsing X.509 certificates
